Fixed hour indicator position updates. Decreased hour indicator z-index

--- a/styles/CalendarDayView.module.scss
+++ b/styles/CalendarDayView.module.scss
@@ -78,7 +78,7 @@
       overflow: hidden;
 
       .currentHourIndicator {
-        z-index: 999;
+        z-index: 150;
         width: 100%;
         height: 1px;
         background-color: #ec3276;
